--- a/styles/style.css
+++ b/styles/style.css
@@ -275,7 +275,7 @@ footer>hr{
     justify-content: center;
 }
 .footer-icon > img{
-    width: 54px;
+    margin: 0px 10px;
 }
 .footer-reserved{
     display: flex;
